syntax = "proto3";
package pb;
option go_package = "internal/infra/grpc/pb";

message blank {}

message CreateOrderRequest {
  string id = 1;
  float price = 2;
  float tax = 3;
}

message OrderResponse {
  string id = 1;
  float price = 2;
  float tax = 3;
  float final_price = 4;
}

message ListOrdersResponse {
  repeated OrderResponse orders = 1;
}

service ListOrders {
  rpc CreateOrder(CreateOrderRequest) returns (OrderResponse);
  rpc ListOrders(blank) returns (ListOrdersResponse);
}